--- a/public/dev/css/join.styl
+++ b/public/dev/css/join.styl
@@ -39,7 +39,9 @@ nav_short()
       form-button(#fff, #07c2af, #08e4ce, #08e4ce)
       .socicon-github
         margin-right: 10px
-
+  .tologin
+    font-weight: 600
+    text-decoration: underline
 
 .maxHeightTransition
   transition: max-height 0.8s;
